# QA_GURU_Python_19_api_diplom

./: .gitignore  README.md  pyproject.toml  requirements.txt
core/: reqeust_api.py
core/utils/: path.py
data/utils/: logging_helper.py  path.py  requests_helper.py
resources/schemas/: user.py
tests/: api.py  conftest.py  test_reqres_in_login.py  test_reqres_in_registration.py  test_reqres_in_resource.py  test_reqres_in_users.py
tests/allure-results/: 0008fca9-b4bc-4194-a253-c3d313b490cf-result.json  00d0bde9-339a-4a3c-88b5-c1abc89696cb-result.json  021a6a89-afcd-40f3-9df0-8a0c9e4f0394-result.json  03329dea-1977-476e-9b0c-35d8fe0bb5bf-container.json  055c036d-3bc5-42af-aad7-40d95ce8790d-container.json  063eee0b-0567-404c-9517-672144a619e2-attachment.txt  06f24f11-8a58-4b6b-876c-3bd76535217e-container.json  08f0a689-f7ea-4611-b02b-065e486caf6d-container.json  09273f44-3dfd-443c-98d6-931c63ab8b45-result.json  0948f9cb-4396-4a31-89da-b03031e365ac-attachment.txt  0acb1e2d-8e20-49ad-ba97-62668877d635-result.json  0ad128c7-2ada-4bb2-b6fb-5161013157ed-result.json  0b70fabf-f528-442d-adec-2b879821090d-attachment.txt  0c912404-49bc-41e0-96c5-771d6a4a119e-result.json  0d868e58-0e14-4268-9120-6b5cfd3a7efc-container.json  0dc7bc3f-f0a9-45b9-bf54-c291862f3c60-container.json  0dd3e50d-0795-468d-bb6c-ab26db1e8285-container.json  0ec70952-ac3e-481b-ad3d-c94cd5a35d01-result.json  10be3004-beb1-465e-9cf1-a148b5fe44ff-container.json  10f6a423-fca5-46a6-91d5-0418b8088134-attachment.txt  13b8ccad-3ba8-4044-aa46-a46be6fd36e0-container.json  (+212 more)
